# oxidros

./: .gitignore  Cargo.toml  DEVELOPMENT.md  README.md  flake.nix  justfile
docs/: API_REFERENCE.md  (+7 more)
examples/ros2msg_example/: Cargo.toml  build.rs
examples/ros2msg_example/src/: main.rs
examples/simple/: Cargo.toml
examples/type_hash_validation/: Cargo.toml  build.rs
examples/type_hash_validation/src/: main.rs
oxidros/: Cargo.toml  LICENSE  README.md  build.rs
oxidros-build/: Cargo.toml  README.md
oxidros-build/src/: lib.rs  msg.rs
oxidros-build/src/msg/: callbacks.rs  config.rs  generator.rs  mod.rs
oxidros-cli/: Cargo.toml  README.md  build.rs
oxidros-cli/src/: bag.rs  main.rs  node.rs  param.rs  service.rs  topic.rs  type_registry.rs  type_resolve.rs  yaml.rs
oxidros-core/: Cargo.toml  README.md
oxidros-core/src/: action.rs  delta_list.rs  error.rs  helper.rs  lib.rs  logging.rs  message.rs  msg.rs  parameter.rs  qos.rs  selector.rs  sequence.rs  time.rs  tracing.rs
oxidros-core/src/api/: mod.rs
oxidros-dynamic/: Cargo.toml  README.md
oxidros-dynamic/src/: decoder.rs  encoder.rs  error.rs  lib.rs
oxidros-msg/: Cargo.toml  README.md  build.rs
oxidros-msg/src/: lib.rs  primitives.rs  strings.rs
oxidros-rcl/: Cargo.toml  build.rs
oxidros-rcl/specifications/src/selector.rs/selector/: README.md  selector.tla
oxidros-rcl/src/: allocator.rs  clock.rs  context.rs  conversions.rs  error.rs  helper.rs  lib.rs  logger.rs  msg.rs  node.rs  parameter.rs  signal_handler.rs
oxidros-rcl/src/action/: client.rs  handle.rs  mod.rs  server.rs
oxidros-rcl/src/rcl/: conversions.rs  mod.rs
oxidros-rcl/src/selector/: async_selector.rs  guard_condition.rs  mod.rs
oxidros-rcl/src/service/: client.rs  mod.rs  server.rs
oxidros-rcl/src/topic/: mod.rs  publisher.rs  publisher_loaned_message.rs  subscriber.rs
oxidros-rcl/tests/: actions.rs  async_actions.rs  async_pubsub.rs  async_pubsub_loaned.rs  async_service.rs  client_wait.rs  logger.rs  no_server.rs  publish.rs  publish_loaned.rs  pubsub.rs  pubsub_loaned.rs  select.rs  service.rs  subscription.rs  test_fqn.rs  timer.rs
oxidros-rcl/tests/common/: mod.rs
oxidros-wrapper/: Cargo.toml  README.md
oxidros-wrapper/examples/: ex1.rs  ex2.rs
oxidros-wrapper/src/: clientserver.rs  common.rs  communicate.rs  lib.rs  logger.rs  params_helpers.rs  pubsub.rs
oxidros-zenoh/: Cargo.toml  README.md
oxidros-zenoh/src/: attachment.rs  clock.rs  context.rs  error.rs  graph_cache.rs  keyexpr.rs  lib.rs  logger.rs  node.rs  parameter.rs  qos.rs  selector.rs  type_description.rs
oxidros-zenoh/src/service/: client.rs  mod.rs  server.rs
oxidros-zenoh/src/topic/: mod.rs  publisher.rs  subscriber.rs
oxidros-zenoh/tests/: parameters.rs  remapping.rs  type_description.rs
oxidros/docs/: message.html  multi_pubsub.html  parameter.html  print.html  pubsub.html  pusbsub_and_service.html  searchindex.js  searchindex.json  service.html  timer.html  zerocopy.html
oxidros/examples/: action_client.rs  action_server.rs
oxidros/examples/my_action/: mod.rs
oxidros/mdbook/src/: action.md  message.md  multi_pubsub.md  parameter.md  pubsub.md  pusbsub_and_service.md  service.md  timer.md  zerocopy.md
oxidros/src/: allocator.rs  clock.rs  context.rs  error.rs  helper.rs  lib.rs  logger.rs  msg.rs  node.rs  parameter.rs  prelude.rs  publisher_loaned_message.rs  qos.rs  rcl.rs  selector.rs  service.rs  signal_handler.rs  subscriber_loaned_message.rs  time.rs  topic.rs
oxidros/src/action/: client.rs  handle.rs  server.rs
oxidros/src/selector/: async_selector.rs  mod.rs
oxidros/src/service/: client.rs  mod.rs  server.rs
oxidros/src/topic/: publisher.rs  publisher_loaned_message.rs  subscriber.rs  subscriber_loaned_message.rs
oxidros/supplements/bindgen/: sed.sh
oxidros/tests/: actions.rs  async_actions.rs  async_pubsub.rs  async_pubsub_loaned.rs  async_service.rs  client_wait.rs  logger.rs  no_server.rs  publish.rs  publish_loaned.rs  pubsub.rs  pubsub_loaned.rs  select.rs  service.rs  subscription.rs  timer.rs
oxidros/tests/common/: README.md  mod.rs
ros2-msg-gen/: Cargo.toml  README.md
ros2-msg-gen/src/: generator.rs  lib.rs  parser.rs
ros2-types/: Cargo.toml  README.md
ros2-types-derive/: Cargo.toml  README.md
ros2-types-derive/src/: attrs.rs  lib.rs  ros2_msg.rs  service_action_type_description.rs  type_description.rs  type_mapping.rs
ros2-types/examples/type_hash_validation/: Cargo.toml  build.rs
ros2-types/examples/type_hash_validation/src/: main.rs
ros2-types/src/: cdr.rs  error.rs  hash.rs  lib.rs  ros_field_type.rs  traits.rs  type_description.rs  types.rs
ros2-types/tests/: derive_tests.rs  hash_tests.rs  rcl_derive_tests.rs
ros2args/: Cargo.toml  README.md
ros2args/examples/: parse_ros2_args.rs
ros2args/src/: errors.rs  lib.rs  names.rs  param_file.rs  parser.rs  types.rs
ros2args/tests/: ros2args_tests.rs
ros2msg/: Cargo.toml  README.md
ros2msg/examples/: convert_msg_to_idl.rs  generate_ros_bindings.rs  idl_conformance_test.rs  validate_ros_idl_files.rs  validate_ros_msg_srv_action_files.rs
ros2msg/src/: idl.pest  idl_adapter.rs  lib.rs
ros2msg/src/generator/: builder.rs  callbacks.rs  codegen.rs  config.rs  mod.rs  token_gen.rs  types.rs
ros2msg/src/idl/: errors.rs  grammar.rs  mod.rs  parser_pest.rs  parser_tests.rs  types.rs  values.rs
ros2msg/src/msg/: action.rs  errors.rs  message.rs  mod.rs  service.rs  types.rs  validation.rs
ros2msg/tests/: bounded_types_integration_test.rs  callback_tests.rs  compare_parameter_value.rs  compare_solid_primitive.rs  debug_octet_mapping.rs  debug_wstring_hash.rs  generator_tests.rs  idl_adapter_tests.rs  idl_mod_tests.rs  idl_parser_tests.rs  idl_typedef_tests.rs  integration_tests.rs  jazzy_integration_tests.rs  msg_errors_tests.rs  msg_mod_tests.rs  octet_constant_test.rs  test_parameter_value_idl.rs
ros2msg/tests/idl/action/: MyAction.idl
ros2msg/tests/idl/msg/: MyMessage.idl
ros2msg/tests/idl/srv/: MyService.idl
safe_drive_msg/: Cargo.toml  LICENSE  README.md
safe_drive_msg/src/: generator.rs  lib.rs
(+79 files in other folders)
