[workspace]
members = [
    "oxidros",
    "oxidros-core",
    "oxidros-msg",
    "oxidros-rcl",
    "oxidros-wrapper",
    "ros2-msg-gen",
    "oxidros-build",
    "idl_parser",
    "examples/ros2msg_example",
    "examples/simple",
]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["Nadhmi JAZI <nadhmi.eljazi@gmail.com>"]
repository = "https://github.com/jazi007/oxidros"
license-file = "LICENSE"

[workspace.dependencies]
num-traits = "0.2"
log = "0.4"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
