[workspace]
members = [
    "oxidros-core",
    "oxidros-msg",
    "oxidros-rcl",
    "oxidros-wrapper",
    "oxidros-build",
    "oxidros",
    "ros2-types-derive",
    "ros2-types",
    "ros2args",
    "ros2msg",
    "examples/ros2msg_example",
    "examples/simple",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
authors = ["Nadhmi JAZI <nadhmi.eljazi@gmail.com>"]
repository = "https://github.com/jazi007/oxidros"
license-file = "LICENSE"

[workspace.dependencies]
num-traits = "0.2"
log = "0.4"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
yaml-rust2 = "0.11"
thiserror = "2"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
