[package]
name = "oxidros-build"
version = "0.5.3"
description = "Build utilities for oxidros ROS2 message generation and FFI bindings"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
bindgen = "0.72"
ros2-types = { version = "0.5.1", path = "../ros2-types", features = ["derive"] }
ros2msg = { version = "0.5.1", path = "../ros2msg" }
