[package]
name = "oxidros-cli"
version = "0.5.0"
edition.workspace = true
authors.workspace = true
license-file.workspace = true
repository.workspace = true
description = "ROS2 command-line tool powered by Zenoh — no ROS2 installation required"
keywords = ["ros2", "robotics", "zenoh", "cli"]
categories = ["command-line-utilities", "science::robotics"]
publish = false

[[bin]]
name = "ros2"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }

# Async runtime
tokio = { workspace = true }

# Oxidros
oxidros-zenoh = { version = "0.5", path = "../oxidros-zenoh" }
oxidros-core = { version = "0.5", path = "../oxidros-core" }
oxidros-dynamic = { version = "0.5", path = "../oxidros-dynamic" }
ros2-types = { version = "0.5", path = "../ros2-types", features = ["derive"] }
serde_json.workspace = true
yaml-rust2.workspace = true
phf = "0.13"
zenoh = { version = "1.0", features = ["unstable"] }

# MCAP bag recording
mcap = "0.24"
chrono = "0.4"

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

[build-dependencies]
oxidros-build = { version = "0.5.2", path = "../oxidros-build" }
ros2msg = { version = "0.5.3", path = "../ros2msg" }
serde_json = { workspace = true }
serde = { workspace = true }
phf_codegen = "0.13"
