[package]
name = "oxidros-core"
version = "0.5.0"
description = "Core traits and types for oxidros ROS2 client library"
keywords = ["ros2", "robotics"]
edition.workspace = true
repository.workspace = true
license-file.workspace = true
authors.workspace = true

[features]
default = []

[dependencies]
futures-core = "0.3"
parking_lot = "0.12"
num-traits = "0.2"
thiserror = "2"
tracing = "0.1"
ros2-types = { version = "0.5.1", path = "../ros2-types" }

[lib]
name = "oxidros_core"
path = "src/lib.rs"
