[package]
name = "oxidros-core"
version = "0.5.5"
description = "Core traits and types for oxidros ROS2 client library"
keywords = ["ros2", "robotics"]
edition.workspace = true
repository.workspace = true
license-file.workspace = true
authors.workspace = true

[features]
default = []
yaml = ["dep:yaml-rust2"]

[dependencies]
futures-core = "0.3"
parking_lot = "0.12"
num-traits = "0.2"
thiserror = "2"
tracing = "0.1"
ros2-types = { version = "0.5.1", path = "../ros2-types" }
yaml-rust2 = { workspace = true, optional = true }

[lib]
name = "oxidros_core"
path = "src/lib.rs"
