[package]
name = "oxidros-rcl"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
oxidros-core = { path = "../oxidros-core" }

[features]
default = []
jazzy = []
iron = []
humble = []
galactic = []

[build-dependencies]
oxidros-build = { path = "../oxidros-build" }

