[package]
name = "oxidros-rcl"
version = "0.5.0"
description = "Oxidros: Formally Specified Rust Bindings for ROS2"
license-file = "LICENSE"
readme = "README.md"
keywords = ["Robotics", "ROS2"]
categories = ["science::robotics"]
repository.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
oxidros-core = { version = "0.5.0", path = "../oxidros-core" }
oxidros-msg = { version = "0.5.1", path = "../oxidros-msg" }
crossbeam-channel = "0.5"
libc = "0.2"
num-traits.workspace = true
num-derive = "0.4"
once_cell = "1.14"
parking_lot.workspace = true
regex = "1.10"
signal-hook = "0.4"
futures-util.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-log.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
memac = "0.5"
rand = "0.10"
log.workspace = true

[build-dependencies]
oxidros-build = { version = "0.5", path = "../oxidros-build" }

[features]
default = []
custom_alloc = []
rcl = ["oxidros-msg/rcl"]

[package.metadata.docs.rs]
features = ["rcl", "custom_alloc"]
all-features = false
no-default-features = true
