[package]
name = "oxidros-wrapper"
version = "0.5.5"
description = "Ergonomic ROS2 API implementing oxidros-core traits for RCL backend"
license-file = "LICENSE"
edition.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = []

[dependencies]
futures-core = "0.3"
log = { version = "0.4", features = ["std"] }
oxidros-core = { version = "0.5.0", path = "../oxidros-core" }
oxidros-rcl = { version = "0.5.0", path = "../oxidros-rcl", features = ["rcl"] }
oxidros-msg = { version = "0.5.1", path = "../oxidros-msg", features = ["rcl"] }
tokio = { version = "1", features = ["time"] }
tokio-util = "0.7"
futures-util.workspace = true
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

