[package]
name = "oxidros"
version = "0.5.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
oxidros-core = { path = "../oxidros-core" }
oxidros-msg = { path = "../oxidros-msg" }
oxidros-rcl = { path = "../oxidros-rcl" }
oxidros-zenoh = { path = "../oxidros-zenoh"}

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[build-dependencies]
oxidros-build = { path = "../oxidros-build" }

[features]
# No default - user must explicitly choose a backend
default = []

# Backend selection
rcl = ["oxidros-msg/rcl", "oxidros-rcl/rcl"]
zenoh = []
