[package]
name = "oxidros"
version = "0.5.0"
description = "A safe, idiomatic Rust client library for ROS 2"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
oxidros-core = { version = "0.5.0", path = "../oxidros-core" }
oxidros-msg = { version = "0.5.1", path = "../oxidros-msg" }
oxidros-rcl = { version = "0.5.0", path = "../oxidros-rcl" }
oxidros-zenoh = { version = "0.5.1", path = "../oxidros-zenoh" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[build-dependencies]
oxidros-build = { version = "0.5", path = "../oxidros-build" }

[features]
# No default - user must explicitly choose a backend
default = []

# Backend selection
rcl = ["oxidros-msg/rcl", "oxidros-rcl/rcl"]
zenoh = []
