[package]
name = "oxidros"
version = "0.5.7"
description = "A safe, idiomatic Rust client library for ROS 2"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
oxidros-core = { version = "0.5", path = "../oxidros-core", features = [
    "yaml",
    "logging",
] }
oxidros-msg = { version = "0.5", path = "../oxidros-msg" }
oxidros-wrapper = { version = "0.5", path = "../oxidros-wrapper", optional = true }
oxidros-zenoh = { version = "0.5", path = "../oxidros-zenoh", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[build-dependencies]
oxidros-build = { version = "0.5", path = "../oxidros-build" }

[features]
# No default - user must explicitly choose a backend
default = []

# Backend selection
rcl = ["oxidros-msg/rcl", "oxidros-wrapper"]
zenoh = ["oxidros-zenoh"]
