[package]
name = "ros2-msg-gen"
version = "0.2.7"
description = "A transpiler from ROS2's message types to Rust's types."
license-file = "LICENSE"
readme = "README.md"
keywords = ["ROS2", "robotics"]
categories = ["science::robotics"]
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
nom = "8"
convert_case = "0.10"
checksumdir = "0.3"
t4_idl_parser = "0.1"
num-bigint = "0.4"
num-traits.workspace = true
