[package]
name = "ros2msg_example"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license-file.workspace = true

# Build script for generating ROS2 message types
build = "build.rs"

[dependencies]
# ros2-type-hash provides the Ros2Msg derive macro for FFI code generation
ros2-type-hash = { path = "../../../ros2utils/crates/ros2-type-hash", features = ["derive"] }

[build-dependencies]
oxidros-build = { path = "../../oxidros-build" }

[features]
default = []
jazzy = ["rcl"]
humble = ["rcl"]
kilted = ["rcl"]
rcl = []
