[package]
name = "ros2msg_example"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license-file.workspace = true

# Build script for generating ROS2 message types
build = "build.rs"


[dependencies]
# ros2-types provides the Ros2Msg derive macro for FFI code generation
ros2-types = { path = "../../ros2-types", features = ["derive"] }
oxidros-msg = { path = "../../oxidros-msg" }

[dev-dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }

[build-dependencies]
oxidros-build = { path = "../../oxidros-build" }
heck = "0.5"

[features]
default = []
jazzy = ["rcl"]
humble = ["rcl"]
kilted = ["rcl"]
rcl = []
