[package]
name = "ros2-types-example"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
ros2-types = { path = "../..", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-big-array = "0.5"

[build-dependencies]
ros2msg = { path = "../../../ros2msg", features = ["serde"] }
ros2-types = { path = "../.." }
heck = "0.5"

[workspace]
